# omni

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DESIGN.md  DESIGN_V3_AUDIO.md  DESIGN_V4_EMOTION_I18N.md  DESIGN_V5_VOICE.md  DESIGN_V6_PRETRAINED_BACKBONE.md  GPU_DAY_CHECKLIST.md  INTERFACES.md  MULTILINGUAL.md
docs/research/: ARCHITECTURE_REVIEW_2026-07-03.md  architectures.md  codecs.md  crosslingual-voice-data.md  emotion-data-tts.md  emotion-s2s-mechanisms.md  inference-opt.md  multilingual.md  omni-refresh-2026.md  quality-codecs-vocoders.md  quality-naturalness-training.md  quality-output-architectures.md  quality-tts-for-data.md  training-systems.md  voice-conditioning.md
scripts/: benchmark.py  chat.py  prepare_data.py  serve.py  synthesize_data.py  train.py  train_tokenizer.py
src/omni/: __init__.py  config.py  grids.py  streams.py
src/omni/audio/: __init__.py  codec.py
src/omni/infer/: __init__.py  chat.py  duplex.py  generate.py
src/omni/model/: __init__.py  hf_omni.py  layers.py  omni.py
src/omni/optim/: __init__.py  perf.py
src/omni/serve/: __init__.py  app.py  streaming.py
src/omni/text/: __init__.py  tokenizer.py
tests/: conftest.py  test_aligned.py  test_codec.py  test_config.py  test_data.py  test_data_v2.py  test_delay_parity.py  test_depth.py  test_duplex.py  test_e2e.py  test_emotion_i18n.py  test_generate.py  test_gpu_preflight.py  test_grids.py  test_hf_backbone.py  test_model.py  test_multilingual.py  test_serve.py  test_streams.py  test_tokenizer.py  test_train.py  test_train_v2.py  test_voice.py  test_wandb.py
(+4 files in other folders)
